--- a/view/sections/sponsors.jade
+++ b/view/sections/sponsors.jade
@@ -11,7 +11,7 @@ section#sponsors(full-height): .page-size
         ul.sponsors-list
 
             li: a(href='http://www.redhat.com', target='_blank'): img(src='/assets/logo/redhat-white.svg', alt='Redhat')
-            li: a(href='http://www.condenast.com', target='_blank'): img(src='/assets/logo/conde-nast-white.svg', alt='Conde Nast')
+            li: a(href='http://www.tesco-careers.com/Jobs-in-our-Office/Business-Area/Technology.aspx', target='_blank'): img(src='/assets/logo/tesco-technology-white.svg', alt='Tesco Technology')
 
     .sponsors-row
 
@@ -20,6 +20,7 @@ section#sponsors(full-height): .page-size
         ul.sponsors-list
 
             li: a(href='http://www.workshape.io', target='_blank'): img(src='/assets/logo/workshape-white.svg', alt='Workshape.io')
+            li: a(href='http://www.condenast.com', target='_blank'): img(src='/assets/logo/conde-nast-white.svg', alt='Conde Nast')
             li: a(href='http://www.holidayextras.co.uk', target='_blank'): img(src='/assets/logo/holiday-extras-white.svg', alt='Holiday Extras')
             li: a(href='http://www.nearform.com', target='_blank'): img(src='/assets/logo/nearform-white.svg', alt='Nearform')
 
